tests/machine/x/cobol/map_in_operator.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T07:47:01Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MAP-IN-OPERATOR.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 TMP PIC 9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       IF (1 = 1 OR 1 = 2)
           DISPLAY "true"
       ELSE
           DISPLAY "false"
       END-IF
       IF (3 = 1 OR 3 = 2)
           DISPLAY "true"
       ELSE
           DISPLAY "false"
       END-IF
       STOP RUN.
